--- a/lab2/.project
+++ b/lab2/.project
@@ -6,7 +6,7 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.eclipse.wst.jsdt.core.javascriptValidator</name>
+		</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
